# axum-api-basic

./: Cargo.toml  cmd-dev.text  video.text
src/: error.rs  main.rs
src/web/: routes_login.rs
tests/: quick_dev.rs
