[package]
name = "axum-api-basic"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
axum = "0.6"
tower-http = { version = "0.4", features = ["fs"] }

[dev-dependencies]
anyhow = "1"
httpc-test = "0.1.1"
